bkool/initial/src/main/bkool/parser/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'array'", "'='", "';'", "'('", "')'", 
                     "','", "'=>'", "'**'", "'.'", "'*'", "'/'", "'%'", 
                     "'+'", "'-'", "'?'" ]

    symbolicNames = [ "<INVALID>", "ARRAY", "EQ", "SEMI", "LP", "RP", "COMMA", 
                      "ARROW", "DSTAR", "DOT", "MUL", "DIV", "MOD", "ADD", 
                      "SUB", "DQUES", "PAIRNAME", "VARNAME", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_variableDeclaration = 1
    RULE_array = 2
    RULE_indexedArray = 3
    RULE_indexedArrayPrime = 4
    RULE_associativeArray = 5
    RULE_associativeArrayPrime = 6
    RULE_associativePair = 7
    RULE_expression = 8
    RULE_operand = 9

    ruleNames =  [ "program", "variableDeclaration", "array", "indexedArray", 
                   "indexedArrayPrime", "associativeArray", "associativeArrayPrime", 
                   "associativePair", "expression", "operand" ]

    EOF = Token.EOF
    ARRAY=1
    EQ=2
    SEMI=3
    LP=4
    RP=5
    COMMA=6
    ARROW=7
    DSTAR=8
    DOT=9
    MUL=10
    DIV=11
    MOD=12
    ADD=13
    SUB=14
    DQUES=15
    PAIRNAME=16
    VARNAME=17
    INTLIT=18
    FLOATLIT=19
    STRINGLIT=20
    WS=21
    ERROR_CHAR=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.VariableDeclarationContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.variableDeclaration()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.VARNAME):
                    break

            self.state = 25
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(BKOOLParser.VARNAME, 0)

        def EQ(self):
            return self.getToken(BKOOLParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(BKOOLParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_variableDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = BKOOLParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(BKOOLParser.VARNAME)
            self.state = 28
            self.match(BKOOLParser.EQ)
            self.state = 29
            self.expression(0)
            self.state = 30
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def indexedArray(self):
            return self.getTypedRuleContext(BKOOLParser.IndexedArrayContext,0)


        def associativeArray(self):
            return self.getTypedRuleContext(BKOOLParser.AssociativeArrayContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = BKOOLParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array)
        try:
            self.state = 34
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.indexedArray()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.associativeArray()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexedArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(BKOOLParser.ARRAY, 0)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def indexedArrayPrime(self):
            return self.getTypedRuleContext(BKOOLParser.IndexedArrayPrimeContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_indexedArray

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexedArray" ):
                return visitor.visitIndexedArray(self)
            else:
                return visitor.visitChildren(self)




    def indexedArray(self):

        localctx = BKOOLParser.IndexedArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_indexedArray)
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(BKOOLParser.ARRAY)
                self.state = 37
                self.match(BKOOLParser.LP)
                self.state = 38
                self.indexedArrayPrime()
                self.state = 39
                self.match(BKOOLParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.match(BKOOLParser.ARRAY)
                self.state = 42
                self.match(BKOOLParser.LP)
                self.state = 43
                self.match(BKOOLParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexedArrayPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(BKOOLParser.ExpressionContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def indexedArrayPrime(self):
            return self.getTypedRuleContext(BKOOLParser.IndexedArrayPrimeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_indexedArrayPrime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexedArrayPrime" ):
                return visitor.visitIndexedArrayPrime(self)
            else:
                return visitor.visitChildren(self)




    def indexedArrayPrime(self):

        localctx = BKOOLParser.IndexedArrayPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_indexedArrayPrime)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.expression(0)
                self.state = 47
                self.match(BKOOLParser.COMMA)
                self.state = 48
                self.indexedArrayPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssociativeArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(BKOOLParser.ARRAY, 0)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def associativeArrayPrime(self):
            return self.getTypedRuleContext(BKOOLParser.AssociativeArrayPrimeContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_associativeArray

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssociativeArray" ):
                return visitor.visitAssociativeArray(self)
            else:
                return visitor.visitChildren(self)




    def associativeArray(self):

        localctx = BKOOLParser.AssociativeArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_associativeArray)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.match(BKOOLParser.ARRAY)
                self.state = 54
                self.match(BKOOLParser.LP)
                self.state = 55
                self.associativeArrayPrime()
                self.state = 56
                self.match(BKOOLParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(BKOOLParser.ARRAY)
                self.state = 59
                self.match(BKOOLParser.LP)
                self.state = 60
                self.match(BKOOLParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssociativeArrayPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def associativePair(self):
            return self.getTypedRuleContext(BKOOLParser.AssociativePairContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def associativeArrayPrime(self):
            return self.getTypedRuleContext(BKOOLParser.AssociativeArrayPrimeContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_associativeArrayPrime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssociativeArrayPrime" ):
                return visitor.visitAssociativeArrayPrime(self)
            else:
                return visitor.visitChildren(self)




    def associativeArrayPrime(self):

        localctx = BKOOLParser.AssociativeArrayPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_associativeArrayPrime)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.associativePair()
                self.state = 64
                self.match(BKOOLParser.COMMA)
                self.state = 65
                self.associativeArrayPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.associativePair()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssociativePairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAIRNAME(self):
            return self.getToken(BKOOLParser.PAIRNAME, 0)

        def ARROW(self):
            return self.getToken(BKOOLParser.ARROW, 0)

        def expression(self):
            return self.getTypedRuleContext(BKOOLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_associativePair

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssociativePair" ):
                return visitor.visitAssociativePair(self)
            else:
                return visitor.visitChildren(self)




    def associativePair(self):

        localctx = BKOOLParser.AssociativePairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_associativePair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(BKOOLParser.PAIRNAME)
            self.state = 71
            self.match(BKOOLParser.ARROW)
            self.state = 72
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operand(self):
            return self.getTypedRuleContext(BKOOLParser.OperandContext,0)


        def DSTAR(self):
            return self.getToken(BKOOLParser.DSTAR, 0)

        def expression(self):
            return self.getTypedRuleContext(BKOOLParser.ExpressionContext,0)


        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def DOT(self):
            return self.getToken(BKOOLParser.DOT, 0)

        def MUL(self):
            return self.getToken(BKOOLParser.MUL, 0)

        def DIV(self):
            return self.getToken(BKOOLParser.DIV, 0)

        def MOD(self):
            return self.getToken(BKOOLParser.MOD, 0)

        def ADD(self):
            return self.getToken(BKOOLParser.ADD, 0)

        def SUB(self):
            return self.getToken(BKOOLParser.SUB, 0)

        def DQUES(self):
            return self.getToken(BKOOLParser.DQUES, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKOOLParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 75
                self.operand()
                self.state = 76
                self.match(BKOOLParser.DSTAR)
                self.state = 77
                self.expression(7)
                pass

            elif la_ == 2:
                self.state = 79
                self.match(BKOOLParser.LP)
                self.state = 80
                self.expression(0)
                self.state = 81
                self.match(BKOOLParser.RP)
                pass

            elif la_ == 3:
                self.state = 83
                self.operand()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 98
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = BKOOLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 86
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 87
                        self.match(BKOOLParser.DOT)
                        self.state = 88
                        self.operand()
                        pass

                    elif la_ == 2:
                        localctx = BKOOLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 89
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 90
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.MUL) | (1 << BKOOLParser.DIV) | (1 << BKOOLParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 91
                        self.operand()
                        pass

                    elif la_ == 3:
                        localctx = BKOOLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 92
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 93
                        _la = self._input.LA(1)
                        if not(_la==BKOOLParser.ADD or _la==BKOOLParser.SUB):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 94
                        self.operand()
                        pass

                    elif la_ == 4:
                        localctx = BKOOLParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 95
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 96
                        self.match(BKOOLParser.DQUES)
                        self.state = 97
                        self.operand()
                        pass

             
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class OperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(BKOOLParser.VARNAME, 0)

        def INTLIT(self):
            return self.getToken(BKOOLParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKOOLParser.FLOATLIT, 0)

        def STRINGLIT(self):
            return self.getToken(BKOOLParser.STRINGLIT, 0)

        def array(self):
            return self.getTypedRuleContext(BKOOLParser.ArrayContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_operand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperand" ):
                return visitor.visitOperand(self)
            else:
                return visitor.visitChildren(self)




    def operand(self):

        localctx = BKOOLParser.OperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_operand)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.VARNAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(BKOOLParser.VARNAME)
                pass
            elif token in [BKOOLParser.INTLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(BKOOLParser.INTLIT)
                pass
            elif token in [BKOOLParser.FLOATLIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.match(BKOOLParser.FLOATLIT)
                pass
            elif token in [BKOOLParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 106
                self.match(BKOOLParser.STRINGLIT)
                pass
            elif token in [BKOOLParser.ARRAY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.array()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[8] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 3)
         




